# mephi_lab4

./: .gitignore  .gitmodules  CMakeLists.txt  Cardinal.h  Generator.h  LazeSequence.h  LazySequence.h  OnlineStatistic.h  Optional.h  main.cpp  t.txt
Exception/: CardinalException.h  ConcatGenerateException.h  GeneratorException.h  LazySequenceException.h  OptionalException.h  ReadOnlyStreamException.h  RecurentGeneratorException.h  SequenceGeneratorException.h
Generators/: ConcatGenerator.h  IGenerator.h  RecurentGenerator.h  Sequencegenerator.h
Streams/: FileReadOnlyStream.h  IReadOnlyStream.h  LazySequenceStream.h  ReadOnlyStream.h
tests/: CardinalTests.cpp  LazySequenceStreamTests.cpp  LazySequenceTests.cpp  RecurentGeneratorTests.cpp
